correct processing remote db_url and config, also fix for docker-compose in db connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "8080:8080"
     links:
     - db
+    environment:
+    - DB_URL=mongodb://db:27017/urls
   db:
     ports:
       - "27017:27017"
